# azure_web_push_rs

./: .gitignore  Cargo.toml  README.md  build.rs  send_notification.sh
public/: index.html  index.js  service-worker.js
src/: lib.rs  main.rs  user.rs
src/azure/: connection_string.rs  get_registrations.rs  mod.rs  push_notification.rs  register.rs
src/dw/: get_registrations.rs  mod.rs  post_notification.rs  post_registration.rs
